@@ -33,7 +33,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [mjr] SECURITY: Fix multiple XSS vulnerabilities when displaying and filtering task lists.
+* |+
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -2709,7 +2710,8 @@
    <date>2018-07-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [mjr] SECURITY: Fix multiple XSS vulnerabilities when displaying and filtering task lists.
+* |+
    </notes>
   </release>
   <release>
