@@ -2,7 +2,9 @@
 v4.2.19
 -------
 
-
+[mjr] SECURITY: Fix multiple XSS vulnerabilities when displaying and filtering
+      task lists.
+|+
 
 
 -------
